# esp32-ntrip-DUO_danusha

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_all.sh  sdkconfig.defaults  sdkconfig.esp32.backup  sdkconfig.esp32c3  sdkconfig.esp32c6  sdkconfig.esp32s3
.github/workflows/: build-release.yml  build-test.yml  docs.yml
components/esp_coex/esp32c6/: esp_coex_adapter.c
docs/: FEATURES.md  GITHUB_ACTIONS.md  PIN_MAPPING.md
main/: CMakeLists.txt  config.c  main.c  retry.c  sd_logger.c  status_led.c  uart.c  util.c  web_server.c  wifi.c
main/include/: config.h  sd_logger.h
main/interface/: ntrip_server.c  ntrip_server_2.c  socket_client.c  socket_client.h  socket_server.c  socket_server.h
www/: index.html
